<resources>
    <string name="app_name">بلدية القرارة</string>
    <string name="facebook_app_id">658099665584109</string>
    <string name="fb_login_protocol_scheme">fb658099665584109</string>
    <string name="prompt_email">البريد الإلكتروني</string>
    <string name="prompt_password">كلمة المرور</string>
    <string name="prompt_ConfirmPassword">تأكيد كلمة المرور </string>
    <string name="login">تسجيل الدخول</string>
    <string name="create_new">اذا لم تمتلك حساب او اشتراك؟<b> انقر هنا للاشتراك</b> </string>
    <string name="name">الإسم رباعي</string>
    <string name="phone_number">رقم الهاتف</string>
    <string name="Subscription_number">رقم إشتراك المياه</string>
    <string name="register">التسجيل</string>
    <string name="name_error">الرجاء ادخال الاسم الصحيح </string>
    <string name="phone_error">الرجاء ادخال رقم الهاتف الصحيح</string>
    <string name="subscription_error">الرجاء ادخال رقم اشتراك المياه الصحيح</string>
    <string name="email_error">الرجاء ادخال البريد الإلكتروني الصحيح</string>
    <string name="error_invalid_email">البريد الإلكتروني غير صالح</string>
    <string name="password_error">الرجاء ادخال كلمة المرور الصحيحة</string>
    <string name="ConfirmPassword_error">الرجاء ادخال كلمة مرور التأكيد الصحيحة</string>
    <string name="NotMatchPass_error">كلمة المرور غير متطابقة</string>
    <string name="error_invalid_password">الرجاء إدخال كلمة مرور لا تقل عن 6 أحرف</string>
    <string name="Password_reminder">هل نسيت كلمة المرور؟</string>
    <string name="please_SignIn">الرجاء تسجيل الدخوال للمتابعة...</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="spinnerarea">
        <item>منطقة 86</item>
        <item>السريج</item>
        <item>أل عبد الغفور و فياض</item>
        <item>منطقة العبادلة</item>
        <item>منطقة الغربية</item>
        <item>منطقة المحررات</item>
        <item>منطقة المواصي</item>
    </string-array>
    <string-array name="spinnercategory">
        <item>قسم المياه والصرف الصحي</item>
        <item>قسم التنظيم والتخطيط</item>
        <item>قسم المالية</item>
        <item>الشؤون الإدارية</item>
        <item>قسم الصيانة</item>
        <item>شكوى عامة</item>
    </string-array>
    <string-array name="spinnerItems">
        <item>item1</item>
        <item>item2</item>
        <item>item3</item>
        <item>item4</item>
    </string-array>
    <string-array name="Month">
        <item>يناير</item>
        <item>فبراير</item>
        <item>مارس</item>
        <item>أبريل</item>
        <item>مايو</item>
        <item>يونيو</item>
        <item>يوليو</item>
        <item>أغسطس</item>
        <item>سبتمير</item>
        <item>أكتوبر</item>
        <item>نوفمبر</item>
        <item>ديسبمر</item>
    </string-array>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="type_message">Type Message</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="btn_sign_up">تسجيل مستخدم</string>
    <string name="btn_login">Login</string>
    <string name="btn_save">Save</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_message">Message</string>
    <string name="label_profile">المستخدمين</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="type_a_phone_number">Please enter a number…</string>
    <string name="button_dial_number">Call Number</string>
    <string name="button_pick_contact">Pick Number</string>
    <string name="contacts_activity_placeholder">This a placeholder Activity for a contacts screen.
        This activity is never opened and does not contain any real contact data for
        keeping this sample simple and focused.
    </string>
    <string name="warning_call_phone_permission">This app requires \'call phone\' permission to run</string>
    <string name="lbl_sign_in">Sign In</string>
    <string name="lbl_sign_up">Sign Up</string>
    <string name="lbl_sign_in_with">Sign In with</string>
    <string name="lbl_forgot">Forgot ?</string>
    <string name="lbl_already_have_a_account">Already have a account?</string>
    <string name="lbl_enter_the_code_nto_verify_email">Enter the Code to Verify Your Email</string>
    <string name="lbl_we_have_sent_you_mail_with_verification_code_to">We have sent you mail with verification code to-</string>
    <string name="lbl_tep_email">jonndeo@gmail.com</string>
    <string name="lbl_did_not_receive">Didn\'t receive?</string>
    <string name="lbl_resend_code">Resend code</string>
    <string name="lbl_verify">Verify</string>
    <string name="lbl_hi_we_re_woobox">Hi, We\'re Woobox!</string>
    <string name="lbl_subheading">We make around your city Affordable, easy and efficient.</string>
    <string name="lbl_my_order">My Order</string>
    <string name="lbl_reward">Reward</string>
    <string name="lbl_wish_list">Wishlist</string>
    <string name="lbl_women">Women</string>
    <string name="lbl_men">Men</string>
    <string name="lbl_kids">Kids</string>
    <string name="lbl_sports">Sports</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_account">Account</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_faq">FAQ</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_contact_us">Contact us</string>
    <string name="lbl_newest_product">Newest Product</string>
    <string name="lbl_newest_product2">Shoes Product</string>
    <string name="lbl_newest_product3">lenses Product</string>
    <string name="lbl_newest_product4">blouse Product</string>
    <string name="lbl_recent_search">Recent Product</string>
    <string name="lbl_top_selling">Top Selling</string>
    <string name="lbl_Featured">Featured Products</string>
    <string name="lbl_offers">Offers</string>
    <string name="lbl_deal">Deal</string>
    <string name="lbl_suggested">Suggested</string>
    <string name="lbl_you_may_like">You May Like</string>
    <string name="lbl_mens">Mens</string>
    <string name="lbl_womens">Womens</string>
    <string name="lbl_electronic">Electronic</string>
    <string name="lbl_optic">Optic</string>
    <string name="lbl_bags">Bags</string>
    <string name="lbl_1">1</string>
    <string name="lbl_add_to_cart">Add to Cart</string>
    <string name="lbl_buy_now">Buy Now</string>
    <string name="lbl_check_availability">Check Availability</string>
    <string name="checkout">checkout</string>
    <string name="lbl_delivery_by">Delivery By</string>
    <string name="lbl_free">Free</string>
    <string name="lbl_brand">Brand</string>
    <string name="lbl_colour">Colour</string>
    <string name="lbl_height">Height</string>
    <string name="lbl_clouser">Clouser</string>
    <string name="lbl_lace_ups">Lace-ups</string>
    <string name="lbl_pattern">Pattern</string>
    <string name="lbl_rate_now">Rate Now</string>
    <string name="lbl_5">5</string>
    <string name="lbl_80">80</string>
    <string name="lbl_4">4</string>
    <string name="lbl_70">70</string>
    <string name="lbl_3">3</string>
    <string name="lbl_2">2</string>
    <string name="lbl_50">50</string>
    <string name="lbl_10">10</string>
    <string name="lbl_reviews">Reviews</string>
    <string name="lbl_filter">Filters</string>
    <string name="lbl_categories">Categories</string>
    <string name="lbl_more">More</string>
    <string name="lbl_price">Price</string>
    <string name="lbl_select_all">Select All</string>
    <string name="lbl_colors">Colors</string>
    <string name="lbl_size">Size</string>
    <string name="lbl_discount">Discount</string>
    <string name="lbl_ratings">Ratings</string>
    <string name="lbl_reset">Reset</string>
    <string name="lbl_apply">Apply</string>
    <string name="lbl_less">Less</string>
    <string name="lbl_delivered_on">Delivered on</string>
    <string name="lbl_rated">Rated</string>
    <string name="lbl_payment_details">Payment Detail</string>
    <string name="lbl_item_price">Item Price -</string>
    <string name="lbl_offer">Offer -</string>
    <string name="lbl_shipping_charge">Shipping Charge -</string>
    <string name="lbl_total_amount">Total Amount -</string>
    <string name="lbl_payment_method">Payment Method -</string>
    <string name="lbl_shipping_details">Shipping Details</string>
    <string name="lbl_order_id">Order ID -</string>
    <string name="lbl_order_date">Order Date -</string>
    <string name="lbl_give_ratings">Give Rating</string>
    <string name="lbl_rate_5">/5</string>
    <string name="lbl_delivery_status">Your Ordered Item has been Delivered</string>
    <string name="lbl_return_replace"><![CDATA[Return & Replace]]></string>
    <string name="lbl_cancel_order">Cancel Order</string>
    <string name="lbl_see_return_policy">See Return Policy</string>
    <string name="lbl_track_item">Track Item</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_delivered_by">Delivery By,</string>
    <string name="lbl_change_address">Change Address</string>
    <string name="lbl_item_deliver_here">Item Deliver Here</string>
    <string name="lbl_add_new_address">Add New address</string>
    <string name="lbl_current_location">Use Current Location</string>
    <string name="lbl_save_address">Save Address</string>
    <string name="address">فاتورتي</string>
    <string name="lbl_edit_address">Edit Address</string>
    <string name="lbl_add_address">Add New Address</string>
    <string name="lbl_home">Home Address</string>
    <string name="lbl_office_commercial">Work Address</string>
    <string name="lbl_add_card">Add Card</string>
    <string name="lbl_pay_with_debit_credit_card">Pay with PayPal</string>
    <string name="lbl_net_banking">Net Banking</string>
    <string name="lbl_cash_on_delivery">Cash on Delivery</string>
    <string name="lbl_other_wallet">Other Wallet</string>
    <string name="lbl_valid">Valid</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_ok">Ok</string>
    <string name="lbl_change_qty">Change Quantity</string>
    <string name="lbl_new_arrival">New Arrival</string>
    <string name="lbl_popular">Popular</string>
    <string name="lbl_help_center">Help Center</string>
    <string name="lbl_quick_pay_cards">Quick Pay Cards</string>
    <string name="lbl_my_offers">Special Offers</string>
    <string name="lbl_my_orders">My Orders</string>
    <string name="lbl_address_manager">Address Manager</string>
    <string name="lbl_verify_now">Verify now</string>
    <string name="lbl_get_newest_offers">Get newest offers</string>
    <string name="lbl_please_verify_your_email_or_number">Please verify your email or number</string>
    <string name="lbl_remove">Remove</string>
    <string name="lbl_move_to_cart">Move to Cart</string>
    <string name="lbl_enable">Enable</string>
    <string name="lbl_invite_now">Invite Now</string>
    <string name="lbl_your_rewards">Your Rewards</string>
    <string name="lbl_cloths">Cloths</string>
    <string name="lbl_60">60</string>
    <string name="lbl_submit">Submit</string>
    <string name="lbl_Accessories">Accessories</string>
    <string name="lbl_footwear">Footwear</string>
    <string name="lbl_order_pending">Order Pending</string>
    <string name="lbl_choose_item">Choose an item</string>
    <string name="lbl_tabDescription">Description</string>
    <string name="lbl_tab_more_info">More info</string>
    <string name="lbl_tabReviews">Reviews</string>
    <string name="lbl_qty">Qty:</string>
    <string name="lbl_see_price_detail">See Price Detail</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_work_address">Work Address</string>
    <string name="lbl_remove_cart">Remove cart</string>
    <string name="lbl_tap_to_retry">Tap to retry</string>
</resources>