<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email"
        android:layout_width="350dp"
        android:layout_height="70dp"
        app:boxStrokeColor="@color/color6"
        app:boxStrokeWidth="2dp"
        app:errorEnabled="true"
        app:hintTextColor="@color/color6"
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.085"
        app:layout_constraintWidth_percent=".8"
        >

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/edit_text_background"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="350dp"
        android:layout_height="70dp"
        app:boxStrokeColor="@color/color6"
        app:boxStrokeWidth="2dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:hintTextColor="@color/color6"
        app:startIconDrawable="@drawable/ic_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintWidth_percent=".8"
        >

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:hint="@string/prompt_password"
            android:inputType="number"
            android:padding="10dp"
            android:background="@drawable/edit_text_background"
            android:layout_marginTop="10dp" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gradient"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintVertical_bias="0.334"
        app:layout_constraintWidth_percent=".8" />

    <TextView
        android:id="@+id/PasswordReminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password_reminder"
        android:textSize="@dimen/text_size"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintVertical_bias="0.136"
        app:layout_constraintWidth_percent=".8" />
</androidx.constraintlayout.widget.ConstraintLayout>