<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/rectangel_2"
    tools:context=".Admin.sign_admin"
    >

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="93dp"
        android:layout_height="96dp"
        android:layout_gravity="top|center"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="12dp"
        android:text="مرحبا بك في بلدية القرارة"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/button6"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:background="@drawable/view_page"
        android:text="تسجيل الدخول للأدمن"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextMain" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp"
        app:errorEnabled="true"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/edit_text_background3"
            android:hint="@string/prompt_email"
            android:textColorHint="@color/black"
            android:textColor="@color/colorWhite"
            android:inputType="textEmailAddress"
            android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="2dp"
        app:errorEnabled="true"

        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/login_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_email"
        app:layout_constraintTop_toBottomOf="@+id/login_email"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_password">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/edit_text_background3"
            android:hint="@string/prompt_password"
            android:textColorHint="@color/black"
            android:inputType="textPassword"
            android:padding="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_constraintVertical_bias="0.248"
        app:layout_constraintWidth_percent=".8" />

</androidx.constraintlayout.widget.ConstraintLayout>

